--- a/tests/cycodt-yaml/inception-layer-1/simple.yaml
+++ b/tests/cycodt-yaml/inception-layer-1/simple.yaml
@@ -3,7 +3,7 @@ tests:
 - name: running simple process
   run: cycod version
 
-- name: running simple script w/ regex expectation
+- name: running script w/ regex expectation
   script: echo hello
   expect-regex: hello
   optional: windows
