--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,6 +124,11 @@ jobs:
     - name: Test
       run: dotnet test --configuration Release --verbosity normal --logger "trx;LogFileName=test-results.trx" --results-directory ./TestResults
     
+    - name: Run cycodt tests
+      run: |
+        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net8.0/linux-x64/publish:$(pwd)/src/cycodt/bin/Release/net8.0/linux-x64/publish:$(pwd)/src/cycodmd/bin/Release/net8.0/linux-x64/publish
+        cycodt run --output-file ./TestResults/test-results-cycodt.trx
+    
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()  # Upload test results even if tests fail
