--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,7 +126,10 @@ jobs:
     
     - name: Run cycodt tests
       run: |
-        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net8.0/linux-x64/publish:$(pwd)/src/cycodt/bin/Release/net8.0/linux-x64/publish:$(pwd)/src/cycodmd/bin/Release/net8.0/linux-x64/publish
+        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net8.0:$(pwd)/src/cycodt/bin/Release/net8.0:$(pwd)/src/cycodmd/bin/Release/net8.0
+        which cycod
+        which cycodmd
+        which cycodt
         cycodt run --output-file ./TestResults/test-results-cycodt.trx
     
     - name: Upload test results
