--- a/src/cycod/cycod.csproj
+++ b/src/cycod/cycod.csproj
@@ -19,7 +19,7 @@
     <PackageId>CycoD</PackageId>
     <Authors>Rob Chambers</Authors>
     <Description>AI-powered CLI application for chat-based interaction with AI assistants</Description>
-    <PackageTags>cli;ai;chat;openai;azure;github-copilot</PackageTags>
+    <PackageTags>cli;ai;chat;openai;azure;github-copilot;aws;bedrock</PackageTags>
     <PackageProjectUrl>https://github.com/robch/cycod</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="Anthropic.SDK" Version="5.4.1" />
+    <PackageReference Include="AWSSDK.Extensions.Bedrock.MEAI" Version="4.0.1.1" />
     <PackageReference Include="Azure.Identity" Version="1.14.0" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.4" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="9.5.0" />
