--- a/src/cycodt/cycodt.csproj
+++ b/src/cycodt/cycodt.csproj
@@ -1,4 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <!-- Import shared version settings -->
+  <Import Project="../../BuildCommon.targets" />
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,10 +9,6 @@
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
     <AssemblyName>cycodt</AssemblyName>
     <OutputType>Exe</OutputType>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
-    <InformationalVersion>1.0.0</InformationalVersion>
     
     <!-- Cross-platform support -->
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
