--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,8 @@ jobs:
         YEAR=$(date +'%Y')
         MONTH=$(date +'%m')
         DAY=$(date +'%d')
-        HOUR=$(date +'%H')
-        MINUTE=$(date +'%M')
         
-        CI_VERSION="1.0.0-ci-$YEAR$MONTH$DAY.$HOUR$MINUTE"
+        CI_VERSION="1.0.0-ci-$YEAR$MONTH$DAY.1
         echo "CI_VERSION=$CI_VERSION" >> $GITHUB_ENV
         echo "version=$CI_VERSION" >> $GITHUB_OUTPUT
     
