--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         MONTH=$(date +'%m')
         DAY=$(date +'%d')
         
-        CI_VERSION="1.0.0-ci-$YEAR$MONTH$DAY.1
+        CI_VERSION="1.0.0-ci-$YEAR$MONTH$DAY.1"
         echo "CI_VERSION=$CI_VERSION" >> $GITHUB_ENV
         echo "version=$CI_VERSION" >> $GITHUB_OUTPUT
     
