benchmarking can run the agent; didn't do diff or eval though...

--- a/src/cycod/cycod.csproj
+++ b/src/cycod/cycod.csproj
@@ -7,9 +7,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
+    <InvariantGlobalization>true</InvariantGlobalization>
     <AssemblyName>cycod</AssemblyName>
     <OutputType>Exe</OutputType>
-    
+
     <!-- Cross-platform support -->
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
     
