--- a/src/cycod-bench/cycod-bench.csproj
+++ b/src/cycod-bench/cycod-bench.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
+    <InvariantGlobalization>true</InvariantGlobalization>
     <AssemblyName>CycodBench</AssemblyName>
     <OutputType>Exe</OutputType>
     
