--- a/src/cycodt/cycodt.csproj
+++ b/src/cycodt/cycodt.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
+    <InvariantGlobalization>true</InvariantGlobalization>
     <AssemblyName>cycodt</AssemblyName>
     <OutputType>Exe</OutputType>
     
