updates to the 2nd version of the benchmark runner, in cycodbench (instead of cycod-bench) under src... Doesn't have the same functionality, but has better symmetry with how the other console apps here are built

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ src/cycodmd/bin/
 src/cycodmd/obj/
 src/cycodt/obj/
 src/cycodt/bin/
+src/cycodbench/obj/
+src/cycodbench/bin/
 src/mcp/**/obj/
 src/mcp/**/bin/
 
